--- a/www.nass.gov.ng/4a271fc8b646afe14241c18e67003f16bd21802e.yml
+++ b/www.nass.gov.ng/4a271fc8b646afe14241c18e67003f16bd21802e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 27 Mar 2018 22:20:04 GMT
+    - Wed, 28 Mar 2018 07:17:52 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=YaVxxpkKRDT2nsOgyLDfZ0; path=/
+    - PHPSESSID=IgXq3gXbTEO507MU2pa%2C21; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 27 Mar 2018 22:20:04 GMT
+recorded_at: Wed, 28 Mar 2018 07:17:52 GMT
