--- a/www.nass.gov.ng/a84a3e66b0e40e33140ccd91ff159e8589a0a5f4.yml
+++ b/www.nass.gov.ng/a84a3e66b0e40e33140ccd91ff159e8589a0a5f4.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 27 Mar 2018 22:22:14 GMT
+    - Wed, 28 Mar 2018 07:20:27 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=0L1zWKCU2b%2CaKus5Nscfz0; path=/
+    - PHPSESSID=EcqDVAkXGqoJqtSXG%2CDDD2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 27 Mar 2018 22:22:14 GMT
+recorded_at: Wed, 28 Mar 2018 07:20:27 GMT
