--- a/www.nass.gov.ng/d7457242767a46d35dbe6eead2d3a9cf49146446.yml
+++ b/www.nass.gov.ng/d7457242767a46d35dbe6eead2d3a9cf49146446.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 27 Mar 2018 22:22:54 GMT
+    - Wed, 28 Mar 2018 07:21:32 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=bk8aU38h68x4EuBlUxccS0; path=/
+    - PHPSESSID=2SJFBa%2CbNjqLWnLSDgSCF2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 27 Mar 2018 22:22:54 GMT
+recorded_at: Wed, 28 Mar 2018 07:21:32 GMT
