--- a/www.nass.gov.ng/d0e59834d6b9ae93023fe8fc802e296d49ae653d.yml
+++ b/www.nass.gov.ng/d0e59834d6b9ae93023fe8fc802e296d49ae653d.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 27 Mar 2018 22:24:04 GMT
+    - Wed, 28 Mar 2018 07:22:57 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Kh%2CtxRFEaxZJ61F4VjhGZ0; path=/
+    - PHPSESSID=eUgV4kU0gz4gjIRni0ofE0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 27 Mar 2018 22:24:04 GMT
+recorded_at: Wed, 28 Mar 2018 07:22:58 GMT
