--- a/www.nass.gov.ng/2db8738f3d273aef9510c9083d1412331a635e20.yml
+++ b/www.nass.gov.ng/2db8738f3d273aef9510c9083d1412331a635e20.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 27 Mar 2018 22:29:00 GMT
+    - Wed, 28 Mar 2018 07:27:01 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=YixlHSepk9tOYAG6S0oWL0; path=/
+    - PHPSESSID=x6hdXqBT%2CcLcPLlpOio662; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 27 Mar 2018 22:29:00 GMT
+recorded_at: Wed, 28 Mar 2018 07:27:01 GMT
