--- a/www.nass.gov.ng/20e4b61e1a0f88d67ffd9eca7011e8010360a1cb.yml
+++ b/www.nass.gov.ng/20e4b61e1a0f88d67ffd9eca7011e8010360a1cb.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 27 Mar 2018 22:35:33 GMT
+    - Wed, 28 Mar 2018 07:35:13 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=E7r%2CI7kGsEY1JzRQf81-f3; path=/
+    - PHPSESSID=AsSq2QzyNNmqLl1vgbEsm0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 27 Mar 2018 22:35:33 GMT
+recorded_at: Wed, 28 Mar 2018 07:35:13 GMT
