--- a/www.nass.gov.ng/ec02f302f341af7f83304fe3b324c2da65f38e64.yml
+++ b/www.nass.gov.ng/ec02f302f341af7f83304fe3b324c2da65f38e64.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 27 Mar 2018 22:40:29 GMT
+    - Wed, 28 Mar 2018 07:40:56 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=9bq46BK6Bg5-vqNa5LJOS1; path=/
+    - PHPSESSID=ZAQrk9QsRXUF%2Cxqkzokrh1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 27 Mar 2018 22:40:29 GMT
+recorded_at: Wed, 28 Mar 2018 07:40:56 GMT
