--- a/www.nass.gov.ng/dc2d9fc9a02f9dd8b65b11211e75f2a9e4c99863.yml
+++ b/www.nass.gov.ng/dc2d9fc9a02f9dd8b65b11211e75f2a9e4c99863.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 27 Mar 2018 22:58:36 GMT
+    - Wed, 28 Mar 2018 07:57:11 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=LK59DnD%2CsoZGQqjvc%2C3-F0; path=/
+    - PHPSESSID=FOfwyU2XjN6mOnc229U4D0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 27 Mar 2018 22:58:36 GMT
+recorded_at: Wed, 28 Mar 2018 07:57:11 GMT
