--- a/www.nass.gov.ng/b486f602dbdefbe6ead2a88b3a53a7bfa2d1eb70.yml
+++ b/www.nass.gov.ng/b486f602dbdefbe6ead2a88b3a53a7bfa2d1eb70.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 27 Mar 2018 23:02:59 GMT
+    - Wed, 28 Mar 2018 08:00:40 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=q%2CcGAg0WU%2COQkepjREiDt2; path=/
+    - PHPSESSID=zSNIzu2NZcrrsDzXGg9RL1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 27 Mar 2018 23:02:59 GMT
+recorded_at: Wed, 28 Mar 2018 08:00:40 GMT
