--- a/www.nass.gov.ng/e174197daa44c102facc93f4d5aa7642108e4694.yml
+++ b/www.nass.gov.ng/e174197daa44c102facc93f4d5aa7642108e4694.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 28 Mar 2018 03:17:55 GMT
+    - Thu, 29 Mar 2018 02:17:49 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=RcS-kqSE58g5PZbye3QA42; path=/
+    - PHPSESSID=bwbwuXlL%2Cjn8HH3gN1Aol3; path=/
     Vary:
     - Accept-Encoding
     Content-Type:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 28 Mar 2018 03:18:00 GMT
+recorded_at: Thu, 29 Mar 2018 02:17:50 GMT
