--- a/www.nass.gov.ng/369692d4197433bda2a54a80d987c26dd4c1f2e5.yml
+++ b/www.nass.gov.ng/369692d4197433bda2a54a80d987c26dd4c1f2e5.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 28 Mar 2018 03:25:40 GMT
+    - Thu, 29 Mar 2018 02:24:15 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=UdM38d74zbYv1%2CAaQzLZQ3; path=/
+    - PHPSESSID=A26U1tEOnMOtOYejEhC361; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 28 Mar 2018 03:25:41 GMT
+recorded_at: Thu, 29 Mar 2018 02:24:15 GMT
