--- a/www.nass.gov.ng/79a1dd107e381f99e38bf93a1d9fb7f97bfafc2a.yml
+++ b/www.nass.gov.ng/79a1dd107e381f99e38bf93a1d9fb7f97bfafc2a.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 28 Mar 2018 03:28:57 GMT
+    - Thu, 29 Mar 2018 02:25:57 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Gi2zeG8FPb%2CF4G98rtnED1; path=/
+    - PHPSESSID=WJ8snh8gc9jIfJBlXDEue1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 28 Mar 2018 03:28:57 GMT
+recorded_at: Thu, 29 Mar 2018 02:25:57 GMT
