--- a/www.nass.gov.ng/706896a5de2d7cc73eee81fb5c1d6a66bdbab6ee.yml
+++ b/www.nass.gov.ng/706896a5de2d7cc73eee81fb5c1d6a66bdbab6ee.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 28 Mar 2018 03:32:35 GMT
+    - Thu, 29 Mar 2018 02:28:33 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=bPNGnx8BsSqo8zF%2CIav3e1; path=/
+    - PHPSESSID=S7x1JsAXR%2CVeEF8UuayfH0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 28 Mar 2018 03:32:35 GMT
+recorded_at: Thu, 29 Mar 2018 02:28:33 GMT
