--- a/www.nass.gov.ng/63d52c179504c4bee47aedc2578da61fc35c2261.yml
+++ b/www.nass.gov.ng/63d52c179504c4bee47aedc2578da61fc35c2261.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 28 Mar 2018 03:34:31 GMT
+    - Thu, 29 Mar 2018 02:29:58 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=N57A-FaCKf-jJV%2CysFfbZ3; path=/
+    - PHPSESSID=VY%2CMay7sClb9e7yM8Oh0g2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 28 Mar 2018 03:34:31 GMT
+recorded_at: Thu, 29 Mar 2018 02:29:58 GMT
