--- a/www.nass.gov.ng/8d41c26dff5703de26b8d01e4efae85b552d0339.yml
+++ b/www.nass.gov.ng/8d41c26dff5703de26b8d01e4efae85b552d0339.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 28 Mar 2018 03:43:33 GMT
+    - Thu, 29 Mar 2018 02:37:47 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=KZ9TF%2CCh5hXJbtnRMp7bB3; path=/
+    - PHPSESSID=%2CynIfUx9xjeQgmV94oJXi1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 28 Mar 2018 03:43:33 GMT
+recorded_at: Thu, 29 Mar 2018 02:37:47 GMT
