--- a/www.nass.gov.ng/006013b3879643c5847b51d31e868f9ee71a134b.yml
+++ b/www.nass.gov.ng/006013b3879643c5847b51d31e868f9ee71a134b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 28 Mar 2018 03:48:26 GMT
+    - Thu, 29 Mar 2018 02:43:44 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=9dBedw3JllJeIKrNcBDte0; path=/
+    - PHPSESSID=jsbG%2CaeBhc%2C58cun2op2y3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 28 Mar 2018 03:48:27 GMT
+recorded_at: Thu, 29 Mar 2018 02:43:44 GMT
