--- a/www.nass.gov.ng/a66fb42bd0331ad278b4ad66546632d70814742e.yml
+++ b/www.nass.gov.ng/a66fb42bd0331ad278b4ad66546632d70814742e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 28 Mar 2018 03:51:41 GMT
+    - Thu, 29 Mar 2018 02:47:52 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=vv39TVxztnSfHXplO3LSH0; path=/
+    - PHPSESSID=psxsA-YL8RKl%2ClvX2tELM1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 28 Mar 2018 03:51:41 GMT
+recorded_at: Thu, 29 Mar 2018 02:47:53 GMT
