--- a/www.nass.gov.ng/eee6365742b7b49e38021b714a001e28d1311f24.yml
+++ b/www.nass.gov.ng/eee6365742b7b49e38021b714a001e28d1311f24.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 28 Mar 2018 04:00:08 GMT
+    - Thu, 29 Mar 2018 02:57:20 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ZM%2CYrZw86juNjolDw%2CThB1; path=/
+    - PHPSESSID=Ak2ZprKEmgc-PDExo75U40; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 28 Mar 2018 04:00:08 GMT
+recorded_at: Thu, 29 Mar 2018 02:57:20 GMT
