--- a/www.nass.gov.ng/6965475315e169db13a0e880ae64285c08f7a666.yml
+++ b/www.nass.gov.ng/6965475315e169db13a0e880ae64285c08f7a666.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 28 Mar 2018 04:21:31 GMT
+    - Thu, 29 Mar 2018 03:20:45 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=9RjNEpdTREB98w89heP7Q2; path=/
+    - PHPSESSID=PBEw4k5fwzBG%2CXdC-9%2Cpt0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 28 Mar 2018 04:21:31 GMT
+recorded_at: Thu, 29 Mar 2018 03:20:45 GMT
