--- a/www.nass.gov.ng/05334fb6ed8ae81c1044a99bff7a7d46ba9d130d.yml
+++ b/www.nass.gov.ng/05334fb6ed8ae81c1044a99bff7a7d46ba9d130d.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 28 Mar 2018 04:23:30 GMT
+    - Thu, 29 Mar 2018 03:22:27 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=009pLiBjum2STZGk74vyW2; path=/
+    - PHPSESSID=2u2xEkflE%2CfaKSY-jTyDm3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 28 Mar 2018 04:23:30 GMT
+recorded_at: Thu, 29 Mar 2018 03:22:27 GMT
